Fri Oct 17 16:31:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c: Make 3d dice look smoother

Thu Oct 16 11:58:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkcolour3d.c: Small fix to insure opacity set at right time

Mon Sep 22 11:50:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c misc3d.c: Add option to cover all of 3d chequer with texture

Mon Sep 15 01:54:44 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* widget3d.c: moving board dimensions to defines in boarddim.h

Mon Sep 1 16:44:58 GMT    Jim Segrave <jes@jes-2.demon.nl>

	* Makefile.in - add graph.c/o/Po
	
Fri Aug 22 17:05:05 2003  Oystein Johansen  <oystein@gnubg.org>

	* misc3d.c: Fix typos.

Thu Aug 21 23:21:05 2003  Joern Thyssen  <jth@gnubg.org>

	Experimental code for reading texture file and textures
	from build directory or install directory.

	* misc3d.c: use PathSearch.

Mon Jun 16 21:35:59 2003  Joern Thyssen  <jth@gnubg.org>

	autoconf magic for BOARD3D

	* font3d.cpp: s/HAVE_FREETYPE/HAVE_FTGL/g
	* widget3d.c: s/USE_GTKGLEXT/HAVE_GTKGLEXT/g
	* widget3d.c, drawboard3d.c, inc3d.h: change paths to includes
	* shadow.c: fix typo (gl->GL)
	* inc3d.h: small updates
	* Makefile.am: autoconf magic

Mon Jun 16 11:50:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	Merged 3d code with main branch.